lustre/mdc/mdc_changelog.c
@@ -291,7 +291,7 @@ static int chlg_load(void *args)
 	int rc;
 	ENTRY;
 
-	crs->crs_last_catidx = -1;
+	crs->crs_last_catidx = 0;
 	crs->crs_last_idx = 0;
 
 again:
